--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
 	<meta charset="utf-8">
 	<title>Quiz</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 	<script src="js/main.js" type="module"></script>
-	<link rel="stylesheet" href="css/app.css">
+	<link rel="stylesheet" href="css/app.css"/>
 </head>
 <body>
 	<div class="container">
@@ -17,7 +17,10 @@
 		<button id="btnNext"> Selanjutnya &raquo;</button>
 		<div id="dialogResult">
 			<button id="btnDialogOk">&nbsp;X&nbsp;</button>
-			<p id="containerResult"></p>
+			<p id="containerResult">
+				<img src="img/wrong.png" style="display: none;"/>
+				<img src="img/correct.png" style="display: none;"/>
+			</p>
 		</div>
 	</div>
 </body>
